src/component/dependency_graph/snapshots/envision__component__dependency_graph__snapshot_tests__snapshot_disabled.snap
---
source: src/component/dependency_graph/snapshot_tests.rs
assertion_line: 100
expression: terminal.backend().to_string()
---
┌ Disabled Graph ──────────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│ ┌ API ──────────────────────────────┐  ┌ Database ─────────────────────────┐ │
│ │● Healthy                          │──│✖ Down                             │ │
│ └───────────────────────────────────┘  └───────────────────────────────────┘ │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
