src/component/dependency_graph/snapshots/envision__component__dependency_graph__snapshot_tests__snapshot_simple_graph.snap
---
source: src/component/dependency_graph/snapshot_tests.rs
assertion_line: 45
expression: terminal.backend().to_string()
---
┌ Service Topology ────────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                        ┌ Database ─────────────────────────┐ │
│                                        │▲ Degraded                         │ │
│                                        └───────────────────────────────────┘ │
│ ┌ API ──────────────────────────────┐  │                                     │
│ │● Healthy                          │──┐                                     │
│ └───────────────────────────────────┘  │                                     │
│                                        │                                     │
│                                        ┌ Cache ────────────────────────────┐ │
│                                        │● Healthy                          │ │
│                                        └───────────────────────────────────┘ │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
