src/component/dependency_graph/snapshots/envision__component__dependency_graph__snapshot_tests__snapshot_single_node.snap
---
source: src/component/dependency_graph/snapshot_tests.rs
assertion_line: 27
expression: terminal.backend().to_string()
---
┌ Service Graph ───────────────────────────────────────────┐
│                                                          │
│                                                          │
│ ┌ API Gateway ─────────────────────────────────────────┐ │
│ │● Healthy                                             │ │
│ └──────────────────────────────────────────────────────┘ │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
