src/component/dependency_graph/snapshots/envision__component__dependency_graph__snapshot_tests__snapshot_top_to_bottom.snap
---
source: src/component/dependency_graph/snapshot_tests.rs
assertion_line: 117
expression: terminal.backend().to_string()
---
┌ Top to Bottom ───────────────────────────────────────────┐
│                                                          │
│                                                          │
│ ┌ API ─────────────────────────────────────────────────┐ │
│ │● Healthy                                             │ │
│ └──────────────────────────────────────────────────────┘ │
│                             │                            │
│                             │                            │
│                             │                            │
│                             │                            │
│ ┌ DB ──────────────────────────────────────────────────┐ │
│ │● Healthy                                             │ │
│ └──────────────────────────────────────────────────────┘ │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
