src/component/dependency_graph/snapshots/envision__component__dependency_graph__snapshot_tests__snapshot_with_selection.snap
---
source: src/component/dependency_graph/snapshot_tests.rs
assertion_line: 63
expression: terminal.backend().to_string()
---
┌ Service Topology ────────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│ ┌ API ──────────────────────────────┐  ┌ Database ─────────────────────────┐ │
│ │● Healthy                          │──│▲ Degraded                         │ │
│ └───────────────────────────────────┘  └───────────────────────────────────┘ │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
