src/component/dependency_graph/snapshots/envision__component__dependency_graph__snapshot_tests__snapshot_with_statuses.snap
---
source: src/component/dependency_graph/snapshot_tests.rs
assertion_line: 83
expression: terminal.backend().to_string()
---
┌ All Statuses ────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                     ┌ Database ────────────┐ │
│                                                     │✖ Down                │ │
│                                                     └──────────────────────┘ │
│ ┌ Frontend ────────────┐  ┌ Backend ─────────────┐  │                        │
│ │● Healthy             │──│▲ Degraded            │──┐                        │
│ └──────────────────────┘  └──────────────────────┘  │                        │
│                                                     │                        │
│                                                     ┌ Cache ───────────────┐ │
│                                                     │? Unknown             │ │
│                                                     └──────────────────────┘ │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
